@startuml SistemaDeGestaoAtletas

' Definição das classes principais

class Usuario {
    id: Long
    login: String
    senha: String
}

class Atleta {
    id: Long
    nome: String
    cpf: String
    dataNascimento: Date
    categoria: Categoria
    quantFalta: int
    quantTreinos: int
}

class Endereco {
    rua: String
    numero: String
    cidade: String
    estado: String
    cep: String
}

class QuestionarioSocial {
    rendaFamiliar: Double
    pessoasEmCasa: Integer
    condicoesMoradia: String
    cadastroNIS: Boolean
}

class Treino {
    id: Long
    local: String
    horario: Date
}

class Frequencia {
    id: Long
    presente: Boolean
}

class Mensagem {
    id: Long
    conteudo: String
    destinatario: Atleta
    treino: Treino
}

class Competicao {
    id: Long
    local: String
    partidas: List<Partida>
}

class Partida {
    id: Long
    local: String
    dataHora: Date
}

class Relatorio {
    frequenciaAluno: String
    frequenciaIdade: String
    rendaFamiliar: String
    pessoasEmCasa: String
}

' Relações entre as classes

Usuario "1" --> "0..*" Atleta 

Atleta "1" *--> "1" Endereco 

Atleta "1" *--> "1" QuestionarioSocial 

Atleta "0..*" --> "0..*" Treino 

Atleta "1" --> "0..*" Frequencia 

Treino "1" *--> "0..*" Frequencia 

Mensagem "1" --> "0..1" Atleta 

Competicao "1" *--> "0..*" Partida 

Treino "0..*" --> "1" Competicao 

Usuario "1" o--> "0..*" Relatorio 


@enduml